--- a/src/sass/blocks/_lines.scss
+++ b/src/sass/blocks/_lines.scss
@@ -2,16 +2,19 @@
     display: flex;
     justify-content: space-between;
     position: absolute;
-    width: 1133px;
-    margin: 0 auto;
-    z-index: -1;
+    width: 1333px;
+    height: 100%;
+    z-index: 0;
     }
     span {
         width: 1px;
-        height: 100vh;
-        background-color: #58585811;
+        position: relative;
+        z-index: -1;
+        // height: 100%;
+        // background-color: #58585811;
+        background-color: rgb(241, 92, 92);
         &:nth-child(2) {
-            margin-left: 42px;
-            margin-right: 40px;
+            margin-left: -55px;
+            margin-right: -62px;
     }
 }
