--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -3,6 +3,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300&display=swap');
 @import 'libs/slick';
+@import 'libs/video-player';
+
 // @import 'libs/animate';
 
 
@@ -16,7 +18,8 @@
     scroll-behavior: smooth;
 }
 .container {
-    width: 1132px;
+    width: 1332px;
+    height: 100%;
     margin: 0 auto;
 }
 
@@ -25,3 +28,4 @@
 @import 'blocks/lines';
 @import 'blocks/experience';
 @import 'blocks/divider';
+@import 'blocks/shop';
