--- a/src/sass/blocks/_shop.scss
+++ b/src/sass/blocks/_shop.scss
@@ -1,7 +1,6 @@
 .shop {
     padding-top: 90px;
-    padding-bottom: 200px;
-    background: url(../img/background/shop_bg.jpg);
+    background: url(../img/background/shop_bg.jpg) center center / cover no-repeat;
     &__title {
         height: 8px;
         font-family: Spartan;
@@ -34,6 +33,7 @@
         display: flex;
         justify-content: space-between;
         margin-top: 220px;
+        height: 300px
     }
     &-cards {
         width: 364px;
@@ -52,6 +52,10 @@
             bottom: 25px;
             left: 65px;
             z-index: 5;
+            img {
+                height: 100%;
+                width: 100%;
+            }
         }
         &__board-series {
             font-family: Poppins;
@@ -105,6 +109,24 @@
             &:hover {
                 text-decoration: none;
             }
+        }
+    }
+    &__show-cards {
+        display: block;
+        margin: 0 auto;
+        font-family: Spartan;
+        font-size: 9px;
+        font-weight: 700;
+        letter-spacing: 5.4px;
+        text-align: center;
+        color: #333333;
+        text-transform: uppercase;
+        z-index: 5;
+        position: relative;
+        padding-right: 113px;
+        &:hover {
+            text-decoration: none;
+            color: #5da8ef;
         }
     }
 }
