--- a/src/sass/blocks/_lines.scss
+++ b/src/sass/blocks/_lines.scss
@@ -10,11 +10,13 @@
         width: 1px;
         position: relative;
         z-index: -1;
-        // height: 100%;
-        // background-color: #58585811;
-        background-color: rgb(241, 92, 92);
+        background-color: #58585811;
+        // background-color: rgb(241, 92, 92);
         &:nth-child(2) {
             margin-left: -55px;
             margin-right: -62px;
-    }
+        }
+        &:nth-child(4) {
+            right: 62px;
+        }
 }
