--- a/src/sass/blocks/_training.scss
+++ b/src/sass/blocks/_training.scss
@@ -69,12 +69,14 @@
             text-align: left;
             color: #333333;
             text-transform: uppercase;
+            &:hover {
+                text-decoration: none;
+            }
         }
     }
     &-point {
         margin-top: 121px;
-        // padding-left: 287px;
-        padding-left: 150px;
+        padding-left: 140px;
         display: flex;
         position: relative;
         &__photo {
