--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -30,3 +30,6 @@
 @import 'blocks/divider';
 @import 'blocks/shop';
 @import 'blocks/training';
+@import 'blocks/club';
+@import 'blocks/camp';
+@import 'blocks/footer';
