Slick slider has been replaced by my own script. Changed cards in the shop section. Added ability to show/hide cards

--- a/src/sass/blocks/_aside.scss
+++ b/src/sass/blocks/_aside.scss
@@ -18,6 +18,11 @@
             }
         }
     }
+    #twitter:hover {
+        svg {
+            fill: #5da8ef;
+        }
+    }
     &__text {
         font-family: Spartan;
         font-size: 10;
