--- a/src/sass/blocks/_main.scss
+++ b/src/sass/blocks/_main.scss
@@ -46,13 +46,19 @@
         position: relative;
         overflow: hidden;
         height: 572px;
-        // width: 1100px;
+        width: 1125px;
         margin-left: 207px;
         z-index: 1;
         box-shadow: 7px 10px 32px 15px rgba(79,74,74,0.39);
     }
+    &-slide {
+        img {
+            width: 100%;
+        }
+    }
     &-wrapper {
         position: relative;
+        transition: 1.5s all;
         // width: 207px;
         &__title {
             font-family: Spartan;
@@ -109,7 +115,7 @@
             transform: rotate(-45deg);
             position: absolute;
             bottom: -281px;
-            left: 48px;
+            left: 50px;
             cursor: pointer;
         }
         &__dots {
