--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -22,6 +22,27 @@
     height: 100%;
     margin: 0 auto;
 }
+.hide {
+    display: none;
+}
+.show {
+    display: '';
+}
+.animation {
+    animation: slide-in-top 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+        @keyframes slide-in-top {
+            0% {
+              -webkit-transform: translateY(-1000px);
+                      transform: translateY(-1000px);
+              opacity: 0;
+            }
+            100% {
+              -webkit-transform: translateY(0);
+                      transform: translateY(0);
+              opacity: 1;
+            }
+          }
+}
 
 @import 'blocks/main';
 @import 'blocks/aside';
