Added hamburger menu, webp images. Created _media.scss. Site optimized for different resolution. Added swipe for slider and function for humburger menu

--- a/src/sass/blocks/_camp.scss
+++ b/src/sass/blocks/_camp.scss
@@ -40,10 +40,11 @@
             font-weight: 700;
             letter-spacing: 5.4px;
             text-align: left;
-            color: #5da8ef;
+            color: #333333;
             text-transform: uppercase;
             &:hover {
                 text-decoration: none;
+                color: $main-color;
             }
         }
     }
