--- a/src/sass/blocks/_club.scss
+++ b/src/sass/blocks/_club.scss
@@ -54,7 +54,7 @@
             height: 50px;
             position: absolute;
             right: 68px;
-            background-color: #5da8ef;
+            background-color: $main-color;
             border: none;
             &::before {
                 content: '';
