--- a/src/sass/blocks/_experience.scss
+++ b/src/sass/blocks/_experience.scss
@@ -80,6 +80,7 @@
             text-transform: uppercase;
             &:hover {
                 text-decoration: none;
+                color: $main-color;
             }
         }
     }
