--- a/src/sass/blocks/_training.scss
+++ b/src/sass/blocks/_training.scss
@@ -71,6 +71,7 @@
             text-transform: uppercase;
             &:hover {
                 text-decoration: none;
+                color: $main-color;
             }
         }
     }
