--- a/src/sass/blocks/_aside.scss
+++ b/src/sass/blocks/_aside.scss
@@ -12,21 +12,37 @@
         display: flex;
         justify-content: space-between;
         a {
-            img {
+            svg {
                 height: 20px;
                 transform: rotate(90deg);
+                g {
+                    fill: #d1d1d1;
+                }
+                #twitter {
+                    g:hover {
+                        transition: .3s all;
+                        fill: #55ACEE;
+                    }
+                }
+                #vimeo {
+                    g:hover {
+                        transition: .3s all;
+                        fill: #19B7EA;
+                    }
+                }
+                #tumblr {
+                    g:hover {
+                        transition: .3s all;
+                        fill: #34526f;
+                    }
+                }
             }
-        }
-    }
-    #twitter:hover {
-        svg {
-            fill: #5da8ef;
         }
     }
     &__text {
         font-family: Spartan;
         font-size: 10;
         font-weight: 700;
-        color: rgba(11, 12, 17, 0.2);
+        color: #d1d1d1;
     }
 }
