--- a/src/sass/blocks/_divider.scss
+++ b/src/sass/blocks/_divider.scss
@@ -6,14 +6,14 @@
         margin-top: 58px;
         margin-left: -116px;
         margin-bottom: 62px;
-        background-color: #5da8ef;
+        background-color: $main-color;
     }
     &_horizontal {
         width: 104px;
         height: 2px;
         margin-top: -26px;
         opacity: 0.7;
-        background-color: #5da8ef;
+        background-color: $main-color;
     }
     &_shop {
         margin: 0 auto;
