--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,16 +1,13 @@
-@import 'libs/_bootstrap-reboot.min';
+@import 'libs/bootstrap-reboot.min';
 @import url('https://fonts.googleapis.com/css2?family=Spartan:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300&display=swap');
-@import 'libs/slick';
 @import 'libs/video-player';
 
-// @import 'libs/animate';
 
 
-// @import 'base/variables';
-// @import 'base/mixin';
-// @import 'base/animations';
+@import 'base/variables';
+@import 'base/animations';
 
 * {
     margin: 0;
@@ -19,7 +16,6 @@
 }
 .container {
     width: 1332px;
-    height: 100%;
     margin: 0 auto;
 }
 .hide {
@@ -28,21 +24,7 @@
 .show {
     display: '';
 }
-.animation {
-    animation: slide-in-top 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-        @keyframes slide-in-top {
-            0% {
-              -webkit-transform: translateY(-1000px);
-                      transform: translateY(-1000px);
-              opacity: 0;
-            }
-            100% {
-              -webkit-transform: translateY(0);
-                      transform: translateY(0);
-              opacity: 1;
-            }
-          }
-}
+
 
 @import 'blocks/main';
 @import 'blocks/aside';
@@ -54,3 +36,5 @@
 @import 'blocks/club';
 @import 'blocks/camp';
 @import 'blocks/footer';
+@import 'blocks/hamburger';
+@import 'blocks/media';
